# vaastu_tax

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_info.txt
data/config/: 99acres_cities.json  housingcom_cities.json  magicbricks_cities.json
data/derived/: covariate_coverage.json  data_manifest.json  regression_results.json  vaastu_analysis_sample.csv
data/v1/: housingcom_listings.parquet
ms/: citation_validation.md  vaastu_wtp_ms.tex  vaastu_wtp_refs.bib
scripts/: 01_collect_99acres.py  01_collect_housingcom.py  01_collect_magicbricks.py  02_analyze.py  02_download_kaggle.py  02_parse_99acres.py  02_parse_housingcom.py  02_parse_magicbricks.py  03_extract_vaastu.py  03_unify_99acres.py  04_analyze_housingcom.py  04_analyze_magicbricks.py  04_rationalize_covariates.py  05_analyze_by_source.py  05_validate_kaggle.py  export_dataverse.py
scripts/99acres/: 01_collect_search.py  02_extract_urls.py  03_collect_detail.py  04_parse.py  __init__.py
scripts/housingcom/: 01_collect_search.py  02_extract_urls.py  03_collect_detail.py  04_parse.py  __init__.py
scripts/magicbricks/: 01_collect_search.py  02_extract_urls.py  03_collect_detail.py  03_collect_projects.py  04_extract_listing_urls.py  04_parse.py  06_parse.py  (+3 more)
tabs/: results_macros.tex  tab_aggregate_coef.tex  tab_average_models.tex  tab_by_source_coefs.tex  tab_heterogeneity.tex  tab_housingcom_robustness.tex  tab_matching.tex
tests/: __init__.py  test_feature_extraction.py
tex/: tab_aggregate_coef.tex  tab_by_source_coefs.tex  tab_counts_by_type.tex  tab_house_sector_support.tex
(+55 files in other folders)
